# og-nn-sim

./: README.md  battle.py  optimize-model.py  train.py
dataset-gen/: CMakeLists.txt
dataset-gen/src/: BattleEngine.cpp  BattleEngine.hpp  DatasetGen.cpp  UnitGroups.hpp  Units.cpp  Units.hpp  Util.hpp
